--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block content %}
-    <form>  
+    <form action="login" method="post">  
         <div class="form-group">
             <label for="inputEmail">Email address</label>
             <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
@@ -22,7 +22,7 @@
             <label for="inputPassword">Password</label>
             <input type="password" class="form-control" id="password" placeholder="Password">
         </div>
-        <button type="submit" class="btn btn-primary">LOGIN</button>
+        <button type="submit" class="btn btn-primary col-12">LOGIN</button>
         <p>Dont have an account? <a href="/signup">Signup</a></p>
     </form>
 {% endblock %}
