--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 
-
 {% block header %}
     <div class="jumbotron">
         <div class="container">
@@ -12,17 +11,23 @@
 {% endblock %}
 
 {% block content %}
+    {% if not session.loggedIn %}
     <form action="login" method="post">  
         <div class="form-group">
             <label for="inputEmail">Email address</label>
-            <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+            <input type="email" name="email" required="true" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
         <div class="form-group">
             <label for="inputPassword">Password</label>
-            <input type="password" class="form-control" id="password" placeholder="Password">
+            <input type="password" name="password" required="true" class="form-control" id="password" placeholder="Password">
         </div>
         <button type="submit" class="btn btn-primary col-12">LOGIN</button>
         <p>Dont have an account? <a href="/signup">Signup</a></p>
     </form>
+    {% else %}
+        <div class="container">
+            <h2>Already logged in. Want to <a href="/logout">Logout?</a> </h2>
+        </div>
+    {% endif %}
 {% endblock %}
