--- a/templates/signup.html
+++ b/templates/signup.html
@@ -12,55 +12,62 @@
 {% endblock %}
 
 {% block content %}
-    <form action="signup" method="post">
-        <div class="form-row">  
-            <div class="form-group col-12">
-                <label for="inputEmail">Name</label>
-                <input type="text"  required="required" class="form-control" id="name" aria-describedby="username" placeholder="Enter name">
+    {% if not session.loggedIn %}
+        <form action="signup" method="post">
+            <div class="form-row">  
+                <div class="form-group col-12">
+                    <label for="inputEmail">Name</label>
+                    <input type="text" name="name" required="required" class="form-control" id="name" aria-describedby="username" placeholder="Enter name">
+                </div>
             </div>
+            <div class="form-row">
+                <div class="form-group col-md-4">
+                    <label for="userage">Date Of Birth</label>
+                    <input type="date" name="dob" required="required" class="form-control" id="age" aria-describedby="user-age" placeholder="Enter age">
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="select-gender">Gender</label>
+                    <select class="form-control" name="gender" id="gendeer">
+                        <option>Male</option>
+                        <option>Female</option>
+                        <option>Other</option>
+                    </select>
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="userage">Pincode</label>
+                    <input type="text" name="pincode" required="required" size="6" maxlength="6" minlength="6" class="form-control" id="pincode" aria-describedby="user-age" placeholder="Enter age">
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="inputContact">Contact Number</label>
+                    <input type="text" name="contact" required="required" size="10" minlength="10" maxlength="10" class="form-control" id="contact" aria-describedby="emailHelp" placeholder="Enter contact">
+                    <small id="contactHelp" class="form-text text-muted">We'll never share your contact with anyone else.</small>
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="inputEmail">Email</label>
+                    <input type="email" name="email" required="required" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="inputpassword">Password</label>
+                    <input type="password" name="password" required="required" minlength="6" class="form-control" id="password" aria-describedby="password" placeholder="Enter password">
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="confirmpassword">Confirm Password</label>
+                    <input type="password" name="c_password" required="required" class="form-control" id="confirm-password" aria-describedby="password" placeholder="Confirm password">
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary col-12">REGISTER</button>
+            <p>Already have an account? <a href="/login">Login</a></p>
+            
+        </form>
+    {% else %}
+        <div class="container">
+            <h2>Already logged in. Logout to create a new account. Go to <a href="/login">Home</a></h2>
         </div>
-        <div class="form-row">
-            <div class="form-group col-md-4">
-                <label for="userage">Date Of Birth</label>
-                <input type="date" required="required" class="form-control" id="age" aria-describedby="user-age" placeholder="Enter age">
-            </div>
-            <div class="form-group col-md-4">
-                <label for="select-gender">Gender</label>
-                <select class="form-control" id="gendeer">
-                    <option>Male</option>
-                    <option>Female</option>
-                    <option>Other</option>
-                </select>
-            </div>
-            <div class="form-group col-md-4">
-                <label for="userage">Pincode</label>
-                <input type="text" required="required" size="6" maxlength="6" minlength="6" class="form-control" id="pincode" aria-describedby="user-age" placeholder="Enter age">
-            </div>
-        </div>
-        <div class="form-row">
-            <div class="form-group col-md-6">
-                <label for="inputContact">Contact Number</label>
-                <input type="text" required="required" size="10" minlength="10" maxlength="10" class="form-control" id="contact" aria-describedby="emailHelp" placeholder="Enter contact">
-                <small id="contactHelp" class="form-text text-muted">We'll never share your contact with anyone else.</small>
-            </div>
-            <div class="form-group col-md-6">
-                <label for="inputEmail">Email</label>
-                <input type="email" required="required" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-            </div>
-        </div>
-        <div class="form-row">
-            <div class="form-group col-md-6">
-                <label for="inputpassword">Password</label>
-                <input type="password" required="required" minlength="6" class="form-control" id="password" aria-describedby="password" placeholder="Enter password">
-            </div>
-            <div class="form-group col-md-6">
-                <label for="confirmpassword">Confirm Password</label>
-                <input type="password" required="required" class="form-control" id="confirm-password" aria-describedby="password" placeholder="Confirm password">
-            </div>
-        </div>
-        <button type="submit" class="btn btn-primary col-12">REGISTER</button>
-        <p>Already have an account? <a href="/login">Login</a></p>
-        
-    </form>
+    {% endif %}
+    
 {% endblock %}
