--- a/templates/home.html
+++ b/templates/home.html
@@ -2,43 +2,47 @@
 <html>
 <head>
     <title>VacciCure-Vaccination Curation System</title>
-    
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    
+    
 
 </head>
 <body>
     <section id="nav-bar">
         <nav class="navbar navbar-expand-lg navbar-light ">
-            <a class="navbar-brand" href="#">VacciCure</a>
+            <a class="navbar-brand" href="#main">VacciCure</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa fa-bars"></i>
             </button>
-              
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
+                
                 <li class="nav-item">
-                  <a class="nav-link" href="#">HOME</a>
+                  <a class="nav-link" href="#main">HOME</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">SERVICES</a>
+                  <a class="nav-link" href="#services">SERVICES</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">ABOUT US</a>
+                  <a class="nav-link" href="#about">ABOUT US</a>
                 </li>
+                {% if not session.loggedIn %}
                 <li class="nav-item">
-                    <a class="nav-link" href="#">MY PROFILE</a>
+                    <a class="nav-link" href="/login">MY PROFILE</a>
                 </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">{{ session.userName }}</a>
+                  </li>
+                {% endif %}
               </ul>
             </div>
         </nav>
     </section>
     <!------------------banner section------------------------>
     <section id="banner">
-    <div class="container">
+    <div class="container" id="main">
     <div class="row">
     <div class="col-md-6">
     <h1 class ="promo-title">Vaccination Curation System</h1>
@@ -52,7 +56,7 @@
     <img src="{{url_for('static', filename='white-wave.png')}}" class="bottom-img">
     </section>
     <!---------------Services Section------------>
-    <section id="services">
+    <section id="services" id="services">
     <div class="container text-center">
     <h1 class="title">SERVICES</h1>
     <div class="row">
@@ -74,7 +78,7 @@
     <!------------About us--------------->
     <section id="about-us">
     <div class="container">
-    <h1 class="title text-center">ABOUT US</h1>
+    <h1 class="title text-center" id="about">ABOUT US</h1>
     <div class="row">
     <div class="col-md-6 about-us">
     <p class="about-title about-us">Why Choose Us?</p>
@@ -92,5 +96,8 @@
     </div>
     </div>
     </section>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
