--- a/templates/home.html
+++ b/templates/home.html
@@ -25,6 +25,9 @@
                   <a class="nav-link" href="#services">SERVICES</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="#history">VACCINE RECORD</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="#about">ABOUT US</a>
                 </li>
                 {% if not session.loggedIn %}
@@ -74,6 +77,28 @@
     </div>
     </div>
     </div>
+    </section>
+    <section class="vaccine-record"  id="history">
+      <div class="container">
+        <h1 class="title text-center">VACCINE RECORD</h1>
+        <div class="row">
+          <div class="col-12 text-center">
+            <form action="/generalQuery">
+              <div class="form-row col-12">
+                  <div class="form-group col-md-6">
+                      <label for="contact">Contact</label>
+                      <input type="text" minlength="10" required="true" class="form-control" id="contact" aria-describedby="emailHelp" placeholder="Enter your contact">
+                  </div>
+                  <div class="form-group col-md-6">
+                      <label for="AdhaarNumber">Adhaar Number</label>
+                      <input type="text" class="form-control" id="adhar" placeholder="Adhar Number">
+                  </div>
+              </div>
+              <button type="submit" class="btn btn-primary col-10">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
     </section>
     <!------------About us--------------->
     <section id="about-us">
