--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,6 +13,9 @@
               <a class="nav-link" href="#services">SERVICES</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="#history">Vaccine History</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#about">ABOUT US</a>
             </li>
             <li class="nav-item">
