--- a/templates/signup.html
+++ b/templates/signup.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="form-group col-md-4">
                     <label for="userage">Pincode</label>
-                    <input type="text" name="pincode" required="required" size="6" maxlength="6" minlength="6" class="form-control" id="pincode" aria-describedby="user-age" placeholder="Enter age">
+                    <input type="text" name="pincode" required="required" size="6" maxlength="6" minlength="6" class="form-control" id="pincode" aria-describedby="user-age" placeholder="Enter Pincode">
                 </div>
             </div>
             <div class="form-row">
