Added covid maps as iframes

--- a/templates/home.html
+++ b/templates/home.html
@@ -78,6 +78,17 @@
     <section class="vaccine-record"  id="history">
       {% include 'vaccineRecord.html' %}
     </section>
+    <section>
+      <div class="fluid-container">
+        <div class="row p-5">
+            <iframe class="col-12 col-md-6" style="overflow: hidden; max-height: 800px; min-height: 650px" src="/covidTimeMap?id=1" allowfullscreen scrolling="no" frameborder="0"></iframe>
+            <iframe class="col-12 col-md-6" style="overflow: hidden; max-height: 800px; min-height: 650px" src="/covidTimeMap?id=2" allowfullscreen scrolling="no" frameborder="0"></iframe>
+        </div>
+          <!--<div class="embed-responsive embed-responsive-16by9"></div>
+            <iframe class="embed-responsive-item" style="overflow: hidden;" src="/covidTimeMap" allowfullscreen scrolling="no"></iframe> -->
+      </div>
+      
+    </section>
     <!------------About us--------------->
     <section id="about-us">
     <div class="container">
