--- a/templates/vaccineRecord.html
+++ b/templates/vaccineRecord.html
@@ -16,7 +16,7 @@
             <button type="submit" class="btn btn-primary col-10">Submit</button>
         </form>
         </div>
-        <div class="col-12" id="vaccine_record_form_result">
+        <div class="col-12 p-3" id="vaccine_record_form_result">
         </div>
     </div>
 </div>
