--- a/templates/home.html
+++ b/templates/home.html
@@ -78,8 +78,9 @@
     <section class="vaccine-record"  id="history">
       {% include 'vaccineRecord.html' %}
     </section>
-    <section>
-      <div class="fluid-container">
+    <section class="pt-5">
+      <div class="fluid-container text-center">
+        <h1 class="title">COVID DATA INDIA</h1>
         <div class="row p-5">
             <iframe class="col-12 col-md-6" style="overflow: hidden; max-height: 800px; min-height: 650px" src="/covidTimeMap?id=1" allowfullscreen scrolling="no" frameborder="0"></iframe>
             <iframe class="col-12 col-md-6" style="overflow: hidden; max-height: 800px; min-height: 650px" src="/covidTimeMap?id=2" allowfullscreen scrolling="no" frameborder="0"></iframe>
