--- a/templates/signup.html
+++ b/templates/signup.html
@@ -40,7 +40,7 @@
 
 {% block content %}
     {% if not session.loggedIn %}
-        <form action="signup" method="post">
+        <form action="/GovtOfficialSignup" method="post">
             <div class="form-row">  
                 <div class="form-group col-12">
                     <label for="inputEmail">Name</label>
