--- a/templates/RegisterMedPractitioner.html
+++ b/templates/RegisterMedPractitioner.html
@@ -1,32 +1,130 @@
+{% extends 'base.html' %}
+
+{% block header %}
+    {% if not session.loggedIn %}
+        <div class="jumbotron">
+            <div class="container">
+                <h1 class="display-4">Vaccination Curation System</h1>
+                <p class="lead">We are trying to digitze the vaccination records of people to lead to a safer and secure future.</p>
+                <hr class="my-4">
+                <button type="button" class="btn btn-dark col-12"><a class="nav-link text-white" href="/" >GO BACK HOME</a></button>
+            </div>
+        </div>
+    {% else %}
+        <section id="nav-bar">
+            <nav class="navbar navbar-expand-lg navbar-light ">
+                <a class="navbar-brand" href="#main">VacciCure</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fa fa-bars"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                    <a class="nav-link" href="/">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="/">SERVICES</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="/">ABOUT US</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login">{{ session.userName }}</a>
+                    </li>
+                </ul>
+                </div>
+            </nav>
+        </section>
+    {% endif %}
+{% endblock %}
+
+{% block content %}
+    {% if not session.loggedIn %}
 <div class="container">
     <h1 class="title text-center">REGISTER MEDICAL PRACTIONER</h1>
     <div class="row">
         <div class="col-12 text-center">
-        <form action="/generalQuery" method="post" id="register_med_practitioner_form">
+        <form action="/MedicalPractitionerSignup" method="post" id="register_med_practitioner_form">
+            <button type="submit" class="btn btn-primary col-12">REGISTER</button>
+            <p>Already have an account? <a href="/login">Login</a></p>
             <div class="form-row col-12">
                 <div class="form-group col-md-6">
                     <label for="name">Enter Name</label>
-                    <input type="text" class="form-control" id="name" placeholder="Enter Your Name">
+                    <input type="text" name="name" class="form-control" id="name" placeholder="Enter Your Name">
                 </div>
                 <div class="form-group col-md-6">
+                    <label for="DOB">Date of Birth</label>
+                    <input type="date" name="dob" class="form-control" id="DOB" placeholder="DOB">
+                </div>
+            </div>
+            <div class="form-row col-12">
+                <div class="form-group col-md-6">
+                    <label for="select-gender">Gender</label>
+                    <select class="form-control" name="gender" id="gendeer">
+                        <option>Male</option>
+                        <option>Female</option>
+                        <option>Other</option>
+                    </select>
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="userage">Pincode</label>
+                    <input type="text" name="pincode" required="required" size="6" maxlength="6" minlength="6" class="form-control" id="pincode" aria-describedby="user-age" placeholder="Enter Pincode">
+                </div>
+            </div>
+            <div class="form-row col-12">
+                <div class="form-group col-md-6">
+                    <label for="State">State</label>
+                    <input type="text" name="state" required="true" class="form-control" id="state" placeholder="Enter state">
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="address">Address</label>
+                    <input type="text" name="address" required="true" class="form-control" id="address" placeholder="Enter Address">
+                </div>
+            </div>
+            <div class="form-row col-12">
+                <div class="form-group col-md-6">
+                    <label for="Guardianname">Enter Guardian's Name</label>
+                    <input type="text" name="g_name" class="form-control" id="name" placeholder="Enter Guardian's Name">
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="AdhaarNumber">Adhaar Number</label>
+                    <input type="text" name="AdhaarNo" class="form-control" id="adhar" placeholder="Adhar Number">
+                </div>
+            </div>
+            <div class="form-row col-12">
+                <div class="form-group col-md-4">
                     <label for="PracticingSince">Practicing Since</label>
-                    <input type="date" class="form-control" id="PracticingSince" placeholder="Practicing Since">
+                    <input type="date" name="PracticingSince" class="form-control" id="PracticingSince" placeholder="Practicing Since">
                 </div>
-            </div>
-            <div class="form-row col-12">
-                <div class="form-group col-md-6">
-                    <label for="licenseNo">PinCode</label>
-                    <input type="text" required="true" class="form-control" id="licenseNo" placeholder="Enter License Number">
+                <div class="form-group col-md-4">
+                    <label for="licenseNo">License Number</label>
+                    <input type="text" name="license" required="true" class="form-control" id="licenseNo" placeholder="Enter License Number">
                 </div>
-                <div class="form-group col-md-6">
+                <div class="form-group col-md-4">
                     <label for="HealthCentreID">Health Centre ID</label>
-                    <input type="text" required="true" class="form-control" id="HealthCentreID" placeholder="Enter Health Centre ID">
+                    <input type="text" name="healthCentreID" required="true" class="form-control" id="HealthCentreID" placeholder="Enter Health Centre ID">
                 </div>
             </div>
-            <div class="form-row col-12">
+            <div class="form-row">
                 <div class="form-group col-md-6">
-                    <label for="UserID">User ID</label>
-                    <input type="text" class="form-control" id="UserID" placeholder="Enter User ID">
+                    <label for="inputContact">Contact Number</label>
+                    <input type="text" name="contact" required="required" size="10" minlength="10" maxlength="10" class="form-control" id="contact" aria-describedby="emailHelp" placeholder="Enter contact">
+                    <small id="contactHelp" class="form-text text-muted">We'll never share your contact with anyone else.</small>
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="inputEmail">Email</label>
+                    <input type="email" name="email" required="required" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="inputpassword">Password</label>
+                    <input type="password" name="password" required="required" minlength="6" class="form-control" id="password" aria-describedby="password" placeholder="Enter password">
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="confirmpassword">Confirm Password</label>
+                    <input type="password" name="c_password" required="required" class="form-control" id="confirm-password" aria-describedby="password" placeholder="Confirm password">
                 </div>
             </div>
             <button type="submit" class="btn btn-primary col-10">Submit</button>
