Added the minimum length of the general query

--- a/templates/home.html
+++ b/templates/home.html
@@ -87,7 +87,8 @@
         <div class="row p-5">
             <iframe class="col-12 col-md-6" style="overflow: hidden; max-height: 800px; min-height: 650px" src="/covidTimeMap?id=1" allowfullscreen scrolling="no" frameborder="0"></iframe>
             <iframe class="col-12 col-md-6" style="overflow: hidden; max-height: 800px; min-height: 650px" src="/covidTimeMap?id=2" allowfullscreen scrolling="no" frameborder="0"></iframe>
-        </div>
+            <blockquote class="twitter-tweet col-md-6"><p lang="en" dir="ltr">I really hope this doesn&#39;t come with a fatal side effects <a href="https://twitter.com/hashtag/vaccine?src=hash&amp;ref_src=twsrc%5Etfw">#vaccine</a> <a href="https://t.co/6K3WyHcSb4">pic.twitter.com/6K3WyHcSb4</a></p>&mdash; Dan_villah (@IAyomitope) <a href="https://twitter.com/IAyomitope/status/1253354522367459334?ref_src=twsrc%5Etfw">April 23, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+          </div>
           <!--<div class="embed-responsive embed-responsive-16by9"></div>
             <iframe class="embed-responsive-item" style="overflow: hidden;" src="/covidTimeMap" allowfullscreen scrolling="no"></iframe> -->
       </div>
