--- a/templates/vaccineRecord.html
+++ b/templates/vaccineRecord.html
@@ -6,11 +6,11 @@
             <div class="form-row col-12">
                 <div class="form-group col-md-6">
                     <label for="contact">Contact</label>
-                    <input type="text" minlength="10" required="true" class="form-control" id="contact" aria-describedby="emailHelp" placeholder="Enter your contact">
+                    <input type="text" minlength="10" maxlength="10" required="true" class="form-control" id="contact" aria-describedby="emailHelp" placeholder="Enter your contact">
                 </div>
                 <div class="form-group col-md-6">
                     <label for="AdhaarNumber">Adhaar Number</label>
-                    <input type="text" class="form-control" id="adhar" placeholder="Adhar Number">
+                    <input type="text" required="true" class="form-control" minlength="12" maxlength="12" id="adhar" placeholder="Adhar Number">
                 </div>
             </div>
             <button type="submit" class="btn btn-primary col-10">Submit</button>
