--- a/templates/general.html
+++ b/templates/general.html
@@ -1,13 +1,7 @@
-<form action="/generalQuery">
-    <div class="form-row">
-        <div class="form-group col-md-4">
-            <label for="contact">Contact</label>
-            <input type="text" minlength="10" required="true" class="form-control" id="contact" aria-describedby="emailHelp" placeholder="Enter your contact">
-        </div>
-        <div class="form-group col-md-4">
-            <label for="AdhaarNumber">Adhaar Number</label>
-            <input type="text" class="form-control" id="adhar" placeholder="Adhar Number">
-        </div>
-        <button type="submit" class="btn btn-primary col-md-4">Submit</button>
-    </div>
-</form>
+<section class="vaccine-record"  id="history">
+    {% include 'vaccineRecord.html' %}
+</section>
+<script src="{{url_for('static', filename='ajax.js')}}" ></script>
+<script>
+    submitAjaxRequest('vaccine_record_form')
+</script>
