--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/login">{{ session.userName }}</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">LOGOUT</a>
+                    </li>
                 </ul>
                 </div>
             </nav>
