--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -21,6 +21,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/login">MY PROFILE</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/login">MY PROFILE</a>
+            </li>
           </ul>
         </div>
     </nav>
