--- a/templates/RoleSelect.html
+++ b/templates/RoleSelect.html
@@ -1,3 +1,42 @@
+{% extends 'base.html' %}
+
+{% block header %}
+    {% if not session.loggedIn %}
+        <div class="jumbotron">
+            <div class="container">
+                <h1 class="display-4">Vaccination Curation System</h1>
+                <p class="lead">We are trying to digitze the vaccination records of people to lead to a safer and secure future.</p>
+                <hr class="my-4">
+                <button type="button" class="btn btn-dark col-12"><a class="nav-link text-white" href="/" >GO BACK HOME</a></button>
+            </div>
+        </div>
+    {% else %}
+        <section id="nav-bar">
+            <nav class="navbar navbar-expand-lg navbar-light ">
+                <a class="navbar-brand" href="#main">VacciCure</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fa fa-bars"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                    <a class="nav-link" href="/">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="/">SERVICES</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="/">ABOUT US</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login">{{ session.userName }}</a>
+                    </li>
+                </ul>
+                </div>
+            </nav>
+        </section>
+    {% endif %}
+
 <div class="container">
     <h1 class="title text-center">SIGN UP AS:</h1>
     <div class="row">
@@ -5,7 +44,7 @@
         <form action="/signup" method="post" id="vaccine_record_form">
             <div class="form-row col-12">
                 <div class="form-row">
-                    <div class="form-group col-md-6">
+                    <div class="form-group col-12">
                         <label for="select-role">Sign up as</label>
                         <select class="form-control" name="role" id="role">
                             <option value="1">Health Centre</option>
@@ -22,3 +61,4 @@
         </div>
     </div>
 </div>
+{% endblock %}
