country-vaccine-record form added

--- a/static/style.css
+++ b/static/style.css
@@ -127,3 +127,7 @@ body
     padding: 4em;
     background-color: #E0E5E6;
 }
+.country-record {
+    padding: 4em;
+    background-color: #E0E5E6;
+}
