--- a/templates/RegisterHealthCentre.html
+++ b/templates/RegisterHealthCentre.html
@@ -38,8 +38,9 @@
     {% endif %}
 {% endblock %}
 
+
 {% block content %}
-    {% if not session.loggedIn %}
+{% if not session.loggedIn %}
 <div class="container">
     <h1 class="title text-center">REGISTER HEALTH CENTRE</h1>
     <div class="row">
@@ -94,7 +95,8 @@
                 </div>
             </div>
             <div class="form-row col-12">
-                <div class="form-group col-md-6">
+                <div class="f{% endif %}
+                {% endblock %}orm-group col-md-6">
                     <label for="State">State</label>
                     <input type="text" name="state" required="true" class="form-control" id="state" placeholder="Enter state">
                 </div>
@@ -106,7 +108,8 @@
             <button type="submit" class="btn btn-primary col-10">Submit</button>
         </form>
         </div>
-        <div class="col-12" id="register_health_centre_form_result">
-        </div>
+        <div class="col-12" id="register_health_centre_form_result"></div>
     </div>
 </div>
+{% endif %}
+{% endblock %}
