--- a/templates/RegisterMedPractitioner.html
+++ b/templates/RegisterMedPractitioner.html
@@ -39,7 +39,7 @@
 {% endblock %}
 
 {% block content %}
-    {% if not session.loggedIn %}
+{% if not session.loggedIn %}
 <div class="container">
     <h1 class="title text-center">REGISTER MEDICAL PRACTIONER</h1>
     <div class="row">
@@ -134,3 +134,5 @@
         </div>
     </div>
 </div>
+{% endif %}
+{% endblock %}
