--- a/templates/result.html
+++ b/templates/result.html
@@ -1,6 +1,15 @@
 <div class="table-responsive">
-    <h3>Result:</h3>
-    <table class="table table-bordered table-striped table-hover" style="border-color: black; border: 2px">
+        {% if errors %}
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                <strong>Holy guacamole!</strong> {{ errors }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        {% else %}
+        <h3>Result:</h3>
+        <table class="table table-bordered table-striped table-hover" style="border-color: black; border: 2px">
+        {% endif %}
         {% if header_list %}
         <tr>
             <th scope="col">#</th>
