--- a/templates/country_record_form.html
+++ b/templates/country_record_form.html
@@ -4,7 +4,7 @@
         <div class="col-12 text-center">
         <form action="/countryRequirements" method="post" id="country_record_form">
             <div class="form-row col-12">
-                <div class="form-group ">
+                <div class="form-group col-12">
                     <label for="country">Country Name</label>
                     <input type="text" name="country" minlength="1" required="true" class="form-control" id="contact" placeholder="Enter Country Name">
                 </div>
@@ -12,7 +12,7 @@
             <button type="submit" class="btn btn-primary col-10">Submit</button>
         </form>
         </div>
-        <div class="col-12 p-3" id="_record_form_result">
+        <div class="col-12 p-3" id="country_record_form_result">
         </div>
     </div>
 </div>
