home.html changed, insertion of vaccine records done

--- a/templates/RegisterHealthCentre.html
+++ b/templates/RegisterHealthCentre.html
@@ -93,8 +93,7 @@
                 </div>
             </div>
             <div class="form-row col-12">
-                <div class="f{% endif %}
-                {% endblock %}orm-group col-md-6">
+                <div class="form-group col-md-6">
                     <label for="State">State</label>
                     <input type="text" name="state" required="true" class="form-control" id="state" placeholder="Enter state">
                 </div>
@@ -112,6 +111,6 @@
         <div class="container">
             <h2>Already logged in. Logout to create a new account. Go to <a href="/login">Home</a></h2>
         </div>
-    {% endif %}
+        {% endif %}
     <div class="col-12" id="register_health_centre_form_result"></div>
 {% endblock %}
