find vaccine facility done for user

--- a/templates/home.html
+++ b/templates/home.html
@@ -90,6 +90,9 @@
     <section class="country-record" id="country">
       {% include 'country_record_form.html' %}
     </section>
+    <section class="nearby-vaccine-facility" id="nearbyfacility">
+      {% include 'userAvailability.html' %}
+    </section>
     {% if session.loggedIn and (session.roleID == 2 or session.roleID == 1) %}
     <section class="vaccine-availability" id="availability">
       {% include 'checkAvailability.html' %}
@@ -144,6 +147,7 @@
       submitAjaxRequest('country_record_form')
       submitAjaxRequest('insert_vaccine_record_form')
       submitAjaxRequest('check_availability_form')
+      submitAjaxRequest('check_availability_for_user_form')
     </script>
   </body>
 </html>
