record check and insertion updated

--- a/templates/insertVaccineRecord.html
+++ b/templates/insertVaccineRecord.html
@@ -48,8 +48,8 @@
                     <input type="text" name="VaccineID" required="true" class="form-control" id="VaccineID" placeholder="Enter the Vaccine ID">
                 </div>
                 <div class="form-group col-md-6">
-                    <label for="UserID">User ID</label>
-                    <input type="text" name="userID" class="form-control" id="UserID" placeholder="Enter User ID">
+                    <label for="AadharNo">Aadhar Number</label>
+                    <input type="text" name="Aadhar" class="form-control" id="Aadhar" placeholder="Enter Aadhar Number">
                 </div>
             </div>
             <div class="form-row col-12">
