--- a/templates/vaccineRecord.html
+++ b/templates/vaccineRecord.html
@@ -4,11 +4,15 @@
         <div class="col-12 text-center">
         <form action="/generalQuery" method="post" id="vaccine_record_form">
             <div class="form-row col-12">
-                <div class="form-group col-md-6">
+                <div class="form-group col-md-4">
+                    <label for="name">Name</label>
+                    <input type="text" name="name" minlength="10" maxlength="10" required="true" class="form-control" id="contact" aria-describedby="emailHelp" placeholder="Enter your contact">
+                </div>
+                <div class="form-group col-md-4">
                     <label for="contact">Contact</label>
                     <input type="text" name="contact" minlength="10" maxlength="10" required="true" class="form-control" id="contact" aria-describedby="emailHelp" placeholder="Enter your contact">
                 </div>
-                <div class="form-group col-md-6">
+                <div class="form-group col-md-4">
                     <label for="AdhaarNumber">Adhaar Number</label>
                     <input type="text" name="aadhar" required="true" class="form-control" minlength="12" maxlength="12" id="adhar" placeholder="Adhar Number">
                 </div>
