Delete account added

--- a/templates/RoleSelect.html
+++ b/templates/RoleSelect.html
@@ -43,15 +43,13 @@
         <div class="col-12 text-center">
         <form action="/signup" method="post" id="vaccine_record_form">
             <div class="form-row col-12">
-                <div class="form-row">
-                    <div class="form-group col-12">
-                        <label for="select-role">Sign up as</label>
-                        <select class="form-control" name="role" id="role">
-                            <option value="1">Health Centre</option>
-                            <option value="2">Medical Practitioner</option>
-                            <option value="3">Government Official</option>
-                        </select>
-                    </div>
+                <div class="form-group col-12">
+                    <label for="select-role">Select an option</label>
+                    <select class="form-control col-12" name="role" id="role">
+                        <option value="1">Health Centre</option>
+                        <option value="2">Medical Practitioner</option>
+                        <option value="3">Government Official</option>
+                    </select>
                 </div>
             </div>
             <button type="submit" class="btn btn-primary col-10">Submit</button>
