--- a/templates/insertVaccineRecord.html
+++ b/templates/insertVaccineRecord.html
@@ -36,7 +36,7 @@
             </nav>
         </section>
     {% endif %}
-
+    
 <div class="container">
     <h1 class="title text-center">INSERT VACCINATION RECORD</h1>
     <div class="row">
@@ -48,6 +48,7 @@
                 </button>
             </div>
         {% endif %}
+        {% if session.loggedIn %}
         <div class="col-12 text-center">
         <form action="/addRecord" method="post" id="insert_vaccine_record_form">
             <div class="form-row col-12">
@@ -95,6 +96,7 @@
         </div>
         <div class="col-12" id="insert_vaccine_record_form_result">
         </div>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
